@@ -10,48 +10,40 @@
 package de.rub.nds.tlsattacker.core.protocol.parser;
 
 import de.rub.nds.modifiablevariable.util.ArrayConverter;
-import de.rub.nds.tlsattacker.core.config.Config;
+import de.rub.nds.tlsattacker.core.constants.HandshakeMessageType;
 import de.rub.nds.tlsattacker.core.constants.ProtocolVersion;
+import de.rub.nds.tlsattacker.core.protocol.message.ClientKeyExchangeMessage;
 import de.rub.nds.tlsattacker.core.protocol.message.PskEcDhClientKeyExchangeMessage;
-import de.rub.nds.tlsattacker.core.layer.context.TlsContext;
-import java.io.ByteArrayInputStream;
-import java.util.Arrays;
-import java.util.Collection;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.Named;
+import org.junit.jupiter.params.provider.Arguments;
 
-@RunWith(Parameterized.class)
-public class PskEcDhClientKeyExchangeParserTest {
+import java.util.List;
+import java.util.stream.Stream;
 
-    @Parameterized.Parameters
-    public static Collection<Object[]> generateData() {
-        return Arrays.asList(new Object[][] {
-            { ArrayConverter.hexStringToByteArray(
-                "000f436c69656e745f6964656e7469747920f73171f4379e1897f443a82bcc06d79368f96aad699f10d21505c661fe80655b"),
-                ProtocolVersion.TLS12 },
-            { ArrayConverter.hexStringToByteArray(
-                "000f436c69656e745f6964656e746974792073f7cf3676cef0cf08b800519732540c8a16062aa5e24fc2360007c265b83f1b"),
-                ProtocolVersion.TLS12 } });
+public class PskEcDhClientKeyExchangeParserTest
+    extends AbstractHandshakeMessageParserTest<PskEcDhClientKeyExchangeMessage, PskEcDhClientKeyExchangeParser> {
+
+    public PskEcDhClientKeyExchangeParserTest() {
+        super(PskEcDhClientKeyExchangeMessage.class, PskEcDhClientKeyExchangeParser::new,
+            List.of(
+                Named.of("PskEcDhClientKeyExchangeMessage::getIdentityLength",
+                    PskEcDhClientKeyExchangeMessage::getIdentityLength),
+                Named.of("PskEcDhClientKeyExchangeMessage::getIdentity", PskEcDhClientKeyExchangeMessage::getIdentity),
+                Named.of("ClientKeyExchangeMessage::getPublicKeyLength", ClientKeyExchangeMessage::getPublicKeyLength),
+                Named.of("ClientKeyExchangeMessage::getPublicKey", ClientKeyExchangeMessage::getPublicKey)));
     }
 
-    private final byte[] message;
-    private final ProtocolVersion version;
-    private final Config config = Config.createConfig();
-
-    public PskEcDhClientKeyExchangeParserTest(byte[] message, ProtocolVersion version) {
-        this.message = message;
-        this.version = version;
+    public static Stream<Arguments> provideTestVectors() {
+        return Stream.of(Arguments.of(ProtocolVersion.TLS12, ArrayConverter.hexStringToByteArray(
+            "10000032000f436c69656e745f6964656e7469747920f73171f4379e1897f443a82bcc06d79368f96aad699f10d21505c661fe80655b"),
+            List.of(HandshakeMessageType.CLIENT_KEY_EXCHANGE.getValue(), 50, 15,
+                ArrayConverter.hexStringToByteArray("436c69656e745f6964656e74697479"), 32,
+                ArrayConverter
+                    .hexStringToByteArray("f73171f4379e1897f443a82bcc06d79368f96aad699f10d21505c661fe80655b"))),
+            Arguments.of(ProtocolVersion.TLS12, ArrayConverter.hexStringToByteArray(
+                "10000032000f436c69656e745f6964656e746974792073f7cf3676cef0cf08b800519732540c8a16062aa5e24fc2360007c265b83f1b"),
+                List.of(HandshakeMessageType.CLIENT_KEY_EXCHANGE.getValue(), 50, 15,
+                    ArrayConverter.hexStringToByteArray("436c69656e745f6964656e74697479"), 32, ArrayConverter
+                        .hexStringToByteArray("73f7cf3676cef0cf08b800519732540c8a16062aa5e24fc2360007c265b83f1b"))));
     }
-
-    @Test
-    public void testParse() {
-        TlsContext tlsContext = new TlsContext(config);
-        tlsContext.setSelectedProtocolVersion(version);
-        PskEcDhClientKeyExchangeParser parser =
-            new PskEcDhClientKeyExchangeParser(new ByteArrayInputStream(message), tlsContext);
-        PskEcDhClientKeyExchangeMessage msg = new PskEcDhClientKeyExchangeMessage();
-        parser.parse(msg);
-    }
-
 }
