@@ -9,45 +9,26 @@
 
 package de.rub.nds.tlsattacker.core.protocol.parser.extension;
 
-import de.rub.nds.tlsattacker.core.config.Config;
+import de.rub.nds.modifiablevariable.util.ArrayConverter;
+import de.rub.nds.tlsattacker.core.constants.ExtensionType;
 import de.rub.nds.tlsattacker.core.protocol.message.extension.MaxFragmentLengthExtensionMessage;
-import de.rub.nds.tlsattacker.core.layer.context.TlsContext;
-import java.io.ByteArrayInputStream;
-import java.util.Arrays;
-import java.util.Collection;
-import static org.junit.Assert.assertTrue;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.Named;
+import org.junit.jupiter.params.provider.Arguments;
 
-@RunWith(Parameterized.class)
-public class MaxFragmentLengthExtensionParserTest {
+import java.util.List;
+import java.util.stream.Stream;
 
-    @Parameterized.Parameters
-    public static Collection<Object[]> generateData() {
-        return Arrays.asList(new Object[][] {});// TODO collect a real
-        // maxFragmentLength extension
+public class MaxFragmentLengthExtensionParserTest
+    extends AbstractExtensionParserTest<MaxFragmentLengthExtensionMessage, MaxFragmentLengthExtensionParser> {
+
+    public MaxFragmentLengthExtensionParserTest() {
+        super(MaxFragmentLengthExtensionMessage.class, MaxFragmentLengthExtensionParser::new,
+            List.of(Named.of("MaxFragmentLengthExtensionMessage::getMaxFragmentLength",
+                MaxFragmentLengthExtensionMessage::getMaxFragmentLength)));
     }
 
-    private final byte[] extension;
-    private final byte[] maxFragmentLength;
-    private final Config config = Config.createConfig();
-
-    public MaxFragmentLengthExtensionParserTest(byte[] extension, byte[] maxFragmentLength) {
-        this.extension = extension;
-        this.maxFragmentLength = maxFragmentLength;
-    }
-
-    /**
-     * Test of parse method, of class MaxFragmentLengthExtensionParser.
-     */
-    @Test
-    public void testParse() {
-        TlsContext tlsContext = new TlsContext(config);
-        MaxFragmentLengthExtensionParser parser =
-            new MaxFragmentLengthExtensionParser(new ByteArrayInputStream(extension), tlsContext);
-        MaxFragmentLengthExtensionMessage msg = new MaxFragmentLengthExtensionMessage();
-        parser.parse(msg);
-        assertTrue(maxFragmentLength == msg.getMaxFragmentLength().getValue());
+    public static Stream<Arguments> provideTestVectors() {
+        return Stream.of(Arguments.of(ArrayConverter.hexStringToByteArray("0001000102"), List.of(),
+            ExtensionType.MAX_FRAGMENT_LENGTH, 1, List.of(new byte[] { 0x02 })));
     }
 }
