@@ -10,59 +10,42 @@
 package de.rub.nds.tlsattacker.core.protocol.parser.extension;
 
 import de.rub.nds.modifiablevariable.util.ArrayConverter;
-import de.rub.nds.tlsattacker.core.config.Config;
+import de.rub.nds.tlsattacker.core.constants.ExtensionType;
 import de.rub.nds.tlsattacker.core.protocol.message.extension.ServerNameIndicationExtensionMessage;
-import de.rub.nds.tlsattacker.core.layer.context.TlsContext;
-import java.io.ByteArrayInputStream;
-import java.util.Arrays;
-import java.util.Collection;
-import static org.junit.Assert.assertArrayEquals;
-import static org.junit.Assert.assertEquals;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.Named;
+import org.junit.jupiter.params.provider.Arguments;
 
-@RunWith(Parameterized.class)
-public class ServerNameIndicationExtensionParserTest {
+import java.util.List;
+import java.util.stream.Stream;
 
-    @Parameterized.Parameters
-    public static Collection<Object[]> generateData() {
-        return Arrays.asList(new Object[][] {
+public class ServerNameIndicationExtensionParserTest
+    extends AbstractExtensionParserTest<ServerNameIndicationExtensionMessage, ServerNameIndicationExtensionParser> {
+
+    public ServerNameIndicationExtensionParserTest() {
+        super(ServerNameIndicationExtensionMessage.class, ServerNameIndicationExtensionParser::new,
+            List.of(
+                Named.of("ServerNameIndicationExtensionMessage::getServerNameListLength",
+                    ServerNameIndicationExtensionMessage::getServerNameListLength),
+                Named.of("ServerNameIndicationExtensionMessage::getServerNameListBytes",
+                    ServerNameIndicationExtensionMessage::getServerNameListBytes)));
+    }
+
+    public static Stream<Arguments> provideTestVectors() {
+        return Stream.of(
             // case 1: completion.amazon.com
-            { ArrayConverter.hexStringToByteArray("0018000015636f6d706c6574696f6e2e616d617a6f6e2e636f6d"), 24,
-                ArrayConverter.hexStringToByteArray("000015636f6d706c6574696f6e2e616d617a6f6e2e636f6d"), },
+            Arguments.of(
+                ArrayConverter.hexStringToByteArray("0000001a0018000015636f6d706c6574696f6e2e616d617a6f6e2e636f6d"),
+                List.of(), ExtensionType.SERVER_NAME_INDICATION, 26,
+                List.of(24, ArrayConverter.hexStringToByteArray("000015636f6d706c6574696f6e2e616d617a6f6e2e636f6d"))),
             // case 2: guzzoni.apple.com
-            { ArrayConverter.hexStringToByteArray("001400001167757a7a6f6e692e6170706c652e636f6d"), 20,
-                ArrayConverter.hexStringToByteArray("00001167757a7a6f6e692e6170706c652e636f6d"), },
+            Arguments.of(ArrayConverter.hexStringToByteArray("00000016001400001167757a7a6f6e692e6170706c652e636f6d"),
+                List.of(), ExtensionType.SERVER_NAME_INDICATION, 22,
+                List.of(20, ArrayConverter.hexStringToByteArray("00001167757a7a6f6e692e6170706c652e636f6d"))),
             // case 3: www.google.com, test.dummy.com
-            { ArrayConverter
-                .hexStringToByteArray("002200000e7777772e676f6f676c652e636f6d00000e746573742e64756d6d792e636f6d"), 34,
-                ArrayConverter
-                    .hexStringToByteArray("00000e7777772e676f6f676c652e636f6d00000e746573742e64756d6d792e636f6d") } });
-    }
-
-    private final byte[] extension;
-    private final int sniListLength;
-    private final byte[] sniListBytes;
-    private final Config config = Config.createConfig();
-
-    public ServerNameIndicationExtensionParserTest(byte[] extension, int sniListLength, byte[] sniListBytes) {
-        this.extension = extension;
-        this.sniListLength = sniListLength;
-        this.sniListBytes = sniListBytes;
-    }
-
-    /**
-     * Test of parse method, of class ServerNameIndicationExtensionParser.
-     */
-    @Test
-    public void testParse() {
-        TlsContext tlsContext = new TlsContext(config);
-        ServerNameIndicationExtensionParser parser =
-            new ServerNameIndicationExtensionParser(new ByteArrayInputStream(extension), tlsContext);
-        ServerNameIndicationExtensionMessage msg = new ServerNameIndicationExtensionMessage();
-        parser.parse(msg);
-        assertArrayEquals(msg.getServerNameListBytes().getValue(), sniListBytes);
-        assertEquals(sniListLength, msg.getServerNameListLength().getValue().intValue());
+            Arguments.of(
+                ArrayConverter.hexStringToByteArray(
+                    "00000024002200000e7777772e676f6f676c652e636f6d00000e746573742e64756d6d792e636f6d"),
+                List.of(), ExtensionType.SERVER_NAME_INDICATION, 36, List.of(34, ArrayConverter
+                    .hexStringToByteArray("00000e7777772e676f6f676c652e636f6d00000e746573742e64756d6d792e636f6d"))));
     }
 }
