@@ -9,68 +9,51 @@
 
 package de.rub.nds.tlsattacker.core.protocol.parser.extension;
 
+import static org.junit.jupiter.api.Assertions.*;
+
 import de.rub.nds.modifiablevariable.util.ArrayConverter;
-import de.rub.nds.tlsattacker.core.config.Config;
+import de.rub.nds.tlsattacker.core.constants.ExtensionType;
 import de.rub.nds.tlsattacker.core.protocol.message.extension.TrustedCaIndicationExtensionMessage;
 import de.rub.nds.tlsattacker.core.protocol.message.extension.trustedauthority.TrustedAuthority;
 import de.rub.nds.tlsattacker.core.protocol.preparator.extension.TrustedAuthorityPreparator;
 import de.rub.nds.tlsattacker.core.layer.context.TlsContext;
-import java.io.ByteArrayInputStream;
-import java.util.Arrays;
-import java.util.Collection;
+import org.junit.jupiter.api.Named;
+import org.junit.jupiter.params.provider.Arguments;
+
 import java.util.List;
-import static org.junit.Assert.*;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import java.util.stream.Stream;
 
-@RunWith(Parameterized.class)
-public class TrustedCaIndicationExtensionParserTest {
+public class TrustedCaIndicationExtensionParserTest
+    extends AbstractExtensionParserTest<TrustedCaIndicationExtensionMessage, TrustedCaIndicationExtensionParser> {
 
-    @Parameterized.Parameters
-    public static Collection<Object[]> generateData() {
-        return Arrays
-            .asList(
-                new Object[][] {
-                    { ArrayConverter.hexStringToByteArray("0009000200050102030405"),
-                        Arrays.asList(new TrustedAuthority((byte) 0, null, null, null),
-                            new TrustedAuthority((byte) 2, null, 5, new byte[] { 0x01, 0x02, 0x03, 0x04, 0x05 })),
-                        9 } });
+    public TrustedCaIndicationExtensionParserTest() {
+        super(TrustedCaIndicationExtensionMessage.class, TrustedCaIndicationExtensionParser::new,
+            List.of(Named.of("TrustedCaIndicationExtensionMessage::getTrustedAuthoritiesLength",
+                TrustedCaIndicationExtensionMessage::getTrustedAuthoritiesLength)));
     }
 
-    private final byte[] extensionBytes;
-    private final List<TrustedAuthority> trustedAuthoritiesList;
-    private final int trustedAuthoritiesLength;
-    private final Config config = Config.createConfig();
-
-    public TrustedCaIndicationExtensionParserTest(byte[] extensionBytes, List<TrustedAuthority> trustedAuthoritiesList,
-        int trustedAuthoritiesLength) {
-        this.extensionBytes = extensionBytes;
-        this.trustedAuthoritiesList = trustedAuthoritiesList;
-        this.trustedAuthoritiesLength = trustedAuthoritiesLength;
+    public static Stream<Arguments> provideTestVectors() {
+        return Stream.of(Arguments.of(ArrayConverter.hexStringToByteArray("0003000B0009000200050102030405"), List.of(),
+            ExtensionType.TRUSTED_CA_KEYS, 11, List.of(9, List.of(new TrustedAuthority((byte) 0, null, null, null),
+                new TrustedAuthority((byte) 2, null, 5, new byte[] { 0x01, 0x02, 0x03, 0x04, 0x05 })))));
     }
 
-    @Before
-    public void setUp() {
-        for (TrustedAuthority ta : trustedAuthoritiesList) {
+    @Override
+    protected void assertExtensionMessageSpecific(List<Object> providedAdditionalValues,
+        List<Object> expectedMessageSpecificValues) {
+        // noinspection unchecked
+        for (TrustedAuthority ta : (List<TrustedAuthority>) expectedMessageSpecificValues.get(1)) {
             TrustedAuthorityPreparator preparator = new TrustedAuthorityPreparator(new TlsContext().getChooser(), ta);
             preparator.prepare();
         }
+
+        super.assertExtensionMessageSpecific(providedAdditionalValues, expectedMessageSpecificValues);
+        // noinspection unchecked
+        assertCachedObjectList((List<TrustedAuthority>) expectedMessageSpecificValues.get(1),
+            message.getTrustedAuthorities());
     }
 
-    @Test
-    public void testParse() {
-        TlsContext tlsContext = new TlsContext(config);
-        TrustedCaIndicationExtensionParser parser =
-            new TrustedCaIndicationExtensionParser(new ByteArrayInputStream(extensionBytes), tlsContext);
-        TrustedCaIndicationExtensionMessage msg = new TrustedCaIndicationExtensionMessage();
-        parser.parse(msg);
-        assertEquals(trustedAuthoritiesLength, (long) msg.getTrustedAuthoritiesLength().getValue());
-        assertCachedObjectList(trustedAuthoritiesList, msg.getTrustedAuthorities());
-    }
-
-    public void assertCachedObjectList(List<TrustedAuthority> expected, List<TrustedAuthority> actual) {
+    private void assertCachedObjectList(List<TrustedAuthority> expected, List<TrustedAuthority> actual) {
         for (int i = 0; i < expected.size(); i++) {
             TrustedAuthority expectedObject = expected.get(i);
             TrustedAuthority actualObject = actual.get(i);
